# fastapi-framework

./: .env  .gitignore  AGENTS.md  README.md  auth.py  config.py  main.py  pyproject.toml  通用异步任务处理接口设计模板.md
core/: config.py  database.py  security.py
db/: app.sqlite3
repositories/: api_key_repo.py  request_log_repo.py  task_repo.py  user_repo.py
routes/: admin_api.py  admin_ui.py  api_keys.py  auth_api.py  tasks.py
schemas/: admin.py  api_key.py  auth.py  response.py  task.py
services/: main.py  task_service.py
services/agents/: agent.py  tools.py
test/: test_exec_tool_cwd.py
tests/: conftest.py  test_tasks.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/admin/: api_keys.html  base.html  dashboard.html  login.html  requests.html  tasks.html
ui/src/: App.vue  api.ts  router.ts  styles.css
ui/src/components/: LayoutShell.vue  StatusTag.vue
ui/src/views/: ApiKeysView.vue  DashboardView.vue  LoginView.vue  RequestsView.vue  TasksView.vue
