[project]
name = "LAMMPS.AI"
version = "0.1.0"
description = "LAMMPS.AI开发"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "deepagents>=0.4.5",
    "dotenv>=0.9.9",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.1.10",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
exclude = '(^|.*[\\\\/])(\\.venv|workspace|services[\\\\/]agents[\\\\/]skills|tests)[\\\\/]|(^|.*[\\\\/])test_.*\\.py$'

[tool.ruff]
extend-exclude = ["workspace", ".venv", ".mypy_cache", ".pytest_cache", ".ruff_cache"]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
